style: fix spacing, use of semicolons, and other small changes

--- a/src/components/socialicons/style.css
+++ b/src/components/socialicons/style.css
@@ -16,7 +16,7 @@
 .stick_follow_icon svg {
     width: 1.3em;
     height: 1.3em;
-    fill: var(--text-color)
+    fill: var(--text-color);
 }
 
 .stick_follow_icon p {
@@ -30,7 +30,7 @@
     line-height: 1.2;
     white-space: nowrap;
     position: relative;
-    transform: rotate( -90deg);
+    transform: rotate(-90deg);
 }
 
 .stick_follow_icon ul li {
@@ -38,7 +38,7 @@
     font-size: 12px;
     text-align: center;
     margin-bottom: 10px;
-    transition: all .3s;
+    transition: all 0.3s;
 }
 
 .stick_follow_icon p:after {
