--- a/src/pages/contact/style.css
+++ b/src/pages/contact/style.css
@@ -3,7 +3,7 @@
         opacity: 0;
     }
 
-    to{
+    to {
         opacity: 1;
     }
 }
@@ -19,11 +19,13 @@
 }
 
 .animate {
-    animation: slide-up 1s ease, opacity 1s ease;
+    animation:
+        slide-up 1s ease,
+        opacity 1s ease;
 }
 
 .contact__form .form-control {
-    padding: 1.375rem .75rem;
+    padding: 1.375rem 0.75rem;
     line-height: 1.5;
     color: var(--text-color);
     background-color: var(--bg-color);
@@ -33,7 +35,7 @@
 
 .contact__form input.form-control {
     margin-bottom: 2em;
-    height: calc(2.5em + .75rem + 2px);
+    height: calc(2.5em + 0.75rem + 2px);
 }
 
 button.btn.ac_btn:hover {
@@ -50,7 +52,7 @@ button.btn.ac_btn:hover {
     background: var(--text-color);
     transform: translateX(100%);
     animation: shift-rightwards 1s ease-in-out infinite;
-    animation-delay: .3s;
+    animation-delay: 0.3s;
 }
 
 @keyframes shift-rightwards {
