--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -3,7 +3,7 @@
         opacity: 0;
     }
 
-    to{
+    to {
         opacity: 1;
     }
 }
@@ -19,16 +19,18 @@
 }
 
 .animate {
-    animation: slide-up 1s ease, opacity 1s ease;
+    animation:
+        slide-up 1s ease,
+        opacity 1s ease;
 }
 
 section {
     flex: 1 0 auto;
     position: relative;
     width: 100%;
-    -webkit-transition: all .5s ease-in;
-    -o-transition: all .5s ease-in;
-    transition: all .5s ease-in;
+    -webkit-transition: all 0.5s ease-in;
+    -o-transition: all 0.5s ease-in;
+    transition: all 0.5s ease-in;
     overflow: hidden;
 }
 
@@ -39,7 +41,6 @@ section {
     position: relative;
     transition: transform 0.4s ease-out; /* Adjust transition timing */
 }
-
 
 .who_am_I {
     font-family: Cinzel;
@@ -71,10 +72,10 @@ section {
     margin-top: -60px;
 }
 
-@media (max-width:991.98px) {
+@media (max-width: 991.98px) {
     .intro_sec {
         display: block;
-        height: auto!important;
+        height: auto !important;
     }
 }
 
@@ -83,7 +84,7 @@ section {
     width: 50%;
 }
 
-@media (max-width:991.98px) {
+@media (max-width: 991.98px) {
     .intro_sec .text,
     .intro_sec .h_bg-image {
         width: 100%;
@@ -95,7 +96,7 @@ section {
     margin: 0 auto;
 }
 
-@media (max-width:991.98px) {
+@media (max-width: 991.98px) {
     .intro_sec .intro {
         max-width: 700px;
         padding-left: 20px;
@@ -104,7 +105,7 @@ section {
 }
 
 .intro_sec .intro .feature .wrap-icon {
-    background: 0 0!important;
+    background: 0 0 !important;
     width: auto;
     height: auto;
     margin-bottom: 0;
@@ -149,7 +150,9 @@ section {
 }
 
 .ac_btn:hover {
-    box-shadow: 8px 8px 0px var(--text-color), -8px -8px 0px var(--text-color);
+    box-shadow:
+        8px 8px 0px var(--text-color),
+        -8px -8px 0px var(--text-color);
 }
 
 .ac_btn:hover .one {
@@ -205,7 +208,7 @@ section {
 }
 
 #button_h:hover {
-    color: var(--primary-color)
+    color: var(--primary-color);
 }
 
 .intro_sec .h_bg-image .block {
@@ -226,7 +229,7 @@ section {
     justify-content: center;
 }
 
-@media (max-width:991.98px) {
+@media (max-width: 991.98px) {
     .intro_sec .h_bg-image {
         height: 600px;
         min-height: 75vh;
@@ -252,7 +255,7 @@ section {
 .intro_sec .h_bg-image .block h3 {
     font-size: 14px;
     color: var(--text-color);
-    letter-spacing: .1rem;
+    letter-spacing: 0.1rem;
     font-weight: 700;
     margin-bottom: 15px;
 }
@@ -260,7 +263,7 @@ section {
 .intro_sec .h_bg-image .block p {
     font-size: 14px;
     line-height: 1.3;
-    color: var(--text-color)
+    color: var(--text-color);
 }
 
 .intro_sec .h_bg-image {
